@@ -3,6 +3,7 @@ changes in version 1.3.6 (2010-08-06)
 - `gt stat` has new options -addintrons and -cdslengthdistri
 - the tool `gt bioseq` has been renamed to `gt seq`
 - `gt seq` has new options -o, -gzip, -bzip2 and -force
+- `gt stat` has new options -o, -gzip, -bzip2 and -force
 
 
 changes in version 1.3.5 (2010-07-12)
